moved wrangling images into own folder

--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -82,7 +82,7 @@ data set. There are 13 entities in the data set in total, corresponding to the
 13 rows in Figure \@ref(fig:02-obs).
 
 ``` {r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A data frame storing data regarding the population of various regions in Canada. In this example data frame, the row that corresponds to the observation for the city of Vancouver is colored yellow, and the column that corresponds to the population variable is colored blue.", fig.retina = 2, out.width = "100%"}
-image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.004.jpeg") %>%
+image_read("img/wrangling/data_frame_slides_cdn.004.jpeg") %>%
   image_crop("3632x700")
 ```
 
@@ -92,7 +92,7 @@ R stores the columns of a data frame as either
 `population`. The next two sections will explain what lists and vectors are.
 
 ``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Data frame with three vectors.", fig.retina = 2, out.width = "100%"}
-image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.005.jpeg") %>%
+image_read("img/wrangling/data_frame_slides_cdn.005.jpeg") %>%
   image_crop("3632x700")
 ```
 
@@ -124,7 +124,7 @@ year
 > Vectors chapter of *Advanced R* [@wickham2019advanced].
 
 ``` {r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a vector whose type is character.", fig.retina = 2, out.width = "100%"}
-image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.007.jpeg") %>%
+image_read("img/wrangling/data_frame_slides_cdn.007.jpeg") %>%
   image_crop("3632x590")
 ```
 
@@ -170,7 +170,7 @@ all elements are characters), whereas elements within a single list can be of
 different types (e.g., characters, integers, logicals, and even other lists). See Figure \@ref(fig:02-vec-vs-list). 
 
 ``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list.", fig.retina = 2, out.width = "100%"}
-image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.008.jpeg") %>%
+image_read("img/wrangling/data_frame_slides_cdn.008.jpeg") %>%
   image_crop("3632x590")
 ```
 
@@ -191,7 +191,7 @@ It is generally much more common to use *vector* columns, though,
 as the values for a single variable are usually all of the same type.
 
 ``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types.", fig.retina = 2, out.width = "100%"}
-image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.009.jpeg") %>%
+image_read("img/wrangling/data_frame_slides_cdn.009.jpeg") %>%
   image_crop("3632x700")
 ```
 
@@ -245,7 +245,7 @@ Figure \@ref(fig:02-tidy-image) demonstrates a tidy data set that satisfies thes
 three criteria. 
 
 ``` {r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Tidy data satisfies three criteria.", fig.retina = 2, out.width = "80%"}
-image_read("img/tidy_data/tidy_data.001.jpeg") |>
+image_read("img/wrangling/tidy_data.001.jpeg") |>
   image_crop("3632x1400")
 ```
 
@@ -309,7 +309,7 @@ by creating a column called "year" and a column called
 Figure \@ref(fig:02-wide-to-long).
 
 ``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Pivoting data from a wide to long data format.",  fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/pivot_functions/pivot_functions.001.jpeg")
+knitr::include_graphics("img/wrangling/pivot_functions.001.jpeg")
 ```
 
 We can achieve this effect in R using the `pivot_longer` function from the `tidyverse` package.
@@ -355,7 +355,7 @@ to get the maximum value.
 (ref:img-pivot-longer-with-table) Going from wide to long with the `pivot_longer` function.
 
 ```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer-with-table)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/pivot_functions/pivot_functions.003.jpeg")
+knitr::include_graphics("img/wrangling/pivot_functions.003.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-longer) details the arguments that we need to specify 
@@ -364,7 +364,7 @@ in the `pivot_longer` function to accomplish this data transformation.
 (ref:img-pivot-longer) Syntax for the `pivot_longer` function.
 
 ``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer)", fig.retina = 2, out.width="100%"}
-image_read("img/pivot_longer.jpeg") |>
+image_read("img/wrangling/pivot_longer.jpeg") |>
   image_crop("1625x1900")
 ```
 
@@ -426,7 +426,7 @@ we need to create columns called "population", "commuters", and "incorporated."
 This is illustrated in the right table of Figure \@ref(fig:long-to-wide).
 
 ``` {r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/pivot_functions/pivot_functions.002.jpeg")
+knitr::include_graphics("img/wrangling/pivot_functions.002.jpeg")
 ```
 
 To tidy this type of data in R, we can use the `pivot_wider` function.
@@ -460,7 +460,7 @@ will be tidied using the `pivot_wider` function.
 (ref:img-pivot-wider-table) Going from long to wide with the `pivot_wider` function.
 
 ``` {r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-wider-table)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/pivot_functions/pivot_functions.004.jpeg")
+knitr::include_graphics("img/wrangling/pivot_functions.004.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-wider) details the arguments that we need to specify 
@@ -470,7 +470,7 @@ in the `pivot_wider` function.
 (ref:img-pivot-wider) Syntax for the `pivot_wider` function.
 
 ``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
-image_read("img/pivot_wider.jpeg") |>
+image_read("img/wrangling/pivot_wider.jpeg") |>
   image_crop("1625x850")
 ```
 
@@ -544,7 +544,7 @@ outlines what we need to specify to use `separate`.
 (ref:img-separate) Syntax for the `separate` function.
 
 ``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
-image_read("img/separate_function.jpeg") |>
+image_read("img/wrangling/separate_function.jpeg") |>
   image_crop("1625x1900")
 ```
 
@@ -868,7 +868,7 @@ then `mutate` would create new columns with the names we specified.
 (ref:img-mutate) Syntax for the `mutate` function.
 
 ``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
-image_read("img/mutate_function.jpeg") |>
+image_read("img/wrangling/mutate_function.jpeg") |>
   image_crop("1625x1900")
 ```
 
@@ -1202,7 +1202,7 @@ or columns, as shown in Figure \@ref(fig:summarize).
 (ref:summarize) `summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.
 
 ```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:summarize)", fig.retina = 2, out.width = "85%"}
-image_read("img/summarize/summarize.001.jpeg") |> 
+image_read("img/wrangling/summarize.001.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
 
@@ -1300,7 +1300,7 @@ for each of the regions in the data set.
 (ref:summarize-groupby) `summarize` and `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The gray, blue, and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.
 
 ```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:summarize-groupby)", fig.retina = 2, out.width = "85%"}
-image_read("img/summarize/summarize.002.jpeg") |> 
+image_read("img/wrangling/summarize.002.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
 
@@ -1342,7 +1342,7 @@ Then we will also explore how we can use a more general iteration function,
 (ref:summarize-across) `summarize` + `across` or `map` is useful for efficiently calculating summary statistics on many columns at once. The darker, top row of each table represents the column headers.
 
 ```{r summarize-across, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "(ref:summarize-across)", fig.retina = 2, out.width = "85%"}
-image_read("img/summarize/summarize.003.jpeg") |> 
+image_read("img/wrangling/summarize.003.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
 
@@ -1478,7 +1478,7 @@ We illustrate such a data transformation in Figure \@ref(fig:mutate-across).
 (ref:mutate-across) `mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.
 
 ```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:mutate-across)",  fig.retina = 2, out.width = "85%"}
-image_read("img/summarize/summarize.005.jpeg") |> 
+image_read("img/wrangling/summarize.005.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
 
@@ -1517,7 +1517,7 @@ We illustrate such a data transformation in Figure \@ref(fig:rowwise).
 (ref:rowwise) `rowwise` and `mutate` is useful for applying functions across columns within one row. The darker, top row of each table represents the column headers.
 
 ```{r rowwise, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "(ref:rowwise)",  fig.retina = 2, out.width = "85%"}
-image_read("img/summarize/summarize.004.jpeg") |> 
+image_read("img/wrangling/summarize.004.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
 
