moved cls2 imgs into own folder

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -78,7 +78,7 @@ labels for new observations without known class labels.
 > when predicting whether a patient's tumor is malignant or benign!
 
 ```{r 06-training-test, echo = FALSE, warning = FALSE, fig.cap = "Splitting the data into training and testing sets.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/training_test.jpeg")
+knitr::include_graphics("img/classification2/training_test.jpeg")
 ```
 
 How exactly can we assess how well our predictions match the true labels for
@@ -97,7 +97,7 @@ these will not be discussed here, but you will likely encounter them in other mo
 books on this topic. 
 
 ```{r 06-ML-paradigm-test, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Process for splitting the data and finding the prediction accuracy.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/ML-paradigm-test.png")
+knitr::include_graphics("img/classification2/ML-paradigm-test.png")
 ```
 
 ## Randomness and seeds {#randomseeds}
@@ -643,7 +643,7 @@ resulting in 5 different choices for the **validation set**; we call this
 *5-fold* cross-validation. 
 
 ```{r 06-cv-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "5-fold cross-validation.", fig.pos = "H", out.extra="", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/cv.png")
+knitr::include_graphics("img/classification2/cv.png")
 ```
 
 To perform 5-fold cross-validation in R with `tidymodels`, we use another
@@ -974,7 +974,7 @@ model we can use the test set to estimate its accuracy.
 The overall process is summarized in Figure \@ref(fig:06-overview).
 
 ```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Overview of KNN classification.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/train-test-overview.jpeg")
+knitr::include_graphics("img/classification2/train-test-overview.jpeg")
 ```
 
 The overall workflow for performing $K$-nearest neighbors classification using `tidymodels` is as follows:
