moved clustering imgs into own ffldr

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -117,7 +117,7 @@ way.
 
 ```{r 09-penguins, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Gentoo penguin.", out.width="60%", fig.align = "center", fig.retina = 2}
 # image source: https://commons.wikimedia.org/wiki/File:Gentoo_Penguin._(8671680772).jpg
-knitr::include_graphics("img/gentoo.jpg")
+knitr::include_graphics("img/clustering/gentoo.jpg")
 ```
 
 To learn about K-means clustering 
