inference imgs in own fldr

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -84,7 +84,7 @@ broader population from which it is taken is referred to as **statistical infere
 \index{inference}\index{statistical inference|see{inference}}
 
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample.", out.width="100%"}
-knitr::include_graphics("img/population_vs_sample.png")
+knitr::include_graphics("img/inference/population_vs_sample.png")
 ```
 
 Note that proportions are not the *only* kind of population parameter we might
@@ -761,7 +761,7 @@ For a sample of size $n$, you would do the following:
 7. Calculate the plausible range of values around our observed point estimate.
 
 ```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Overview of the bootstrap process.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/intro-bootstrap.jpeg")
+knitr::include_graphics("img/inference/intro-bootstrap.jpeg")
 ```
 
 ### Bootstrapping in R 
