--- a/source/jupyter.Rmd
+++ b/source/jupyter.Rmd
@@ -50,7 +50,7 @@ An example of what a Jupyter notebook looks like is shown in
 Figure \@ref(fig:img-jupyter).
 
 ```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/jupyter.png")
+knitr::include_graphics("img/jupyter/jupyter.png")
 ```
 
 ### Accessing Jupyter
@@ -80,12 +80,12 @@ This number indicates the order in which the cells were run
 (Figure \@ref(fig:code-cell-run)).
 
 ```{r code-cell-not-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has not yet been executed.", fig.retina = 2, out.width="100%"}
-image_read("img/code-cell-not-run.png") |> 
+image_read("img/jupyter/code-cell-not-run.png") |> 
   image_crop("3632x1000")
 ```
 
 ```{r code-cell-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has been executed.", fig.retina = 2, out.width="100%"}
-image_read("img/code-cell-run.png") |> 
+image_read("img/jupyter/code-cell-run.png") |> 
   image_crop("3632x2000")
 ```
 
@@ -107,7 +107,7 @@ has been activated (Figure \@ref(fig:activate-and-run-button)), the cell can be 
 button in the toolbar, or by using the keyboard shortcut `Shift + Enter`.
 
 ```{r activate-and-run-button, echo = FALSE, fig.cap = "An activated cell that is ready to be run. The blue rectangle to the cell's left (annotated by a red arrow) indicates that it is ready to be run. The cell can be run by clicking the run button (circled in red).", fig.retina = 2, out.width="100%"}
-image_read("img/activate-and-run-button-annotated.png") |> 
+image_read("img/jupyter/activate-and-run-button-annotated.png") |> 
   image_crop("3632x900")
 ```
 
@@ -129,7 +129,7 @@ then running all cells (options 2 or 3) emulates how your notebook code would
 run if you completely restarted Jupyter before executing your entire notebook.
 
 ```{r restart-kernel-run-all, echo = FALSE, fig.cap = "Restarting the R session can be accomplished by clicking Restart Kernel and Run All Cells...", fig.retina = 2, out.width="100%"}
-image_read("img/restart-kernel-run-all.png") |> 
+image_read("img/jupyter/restart-kernel-run-all.png") |> 
   image_crop("3632x900")
 ```
 
@@ -159,7 +159,7 @@ so after this, all you have to do is write R code within the new cell you just
 created!
 
 ```{r create-new-code-cell, echo = FALSE, fig.cap = "New cells can be created by clicking the + button, and are by default code cells.", fig.retina = 2, out.width="100%"}
-image_read("img/create-new-code-cell.png") |> 
+image_read("img/jupyter/create-new-code-cell.png") |> 
   image_crop("3632x900")
 ```
 
@@ -185,12 +185,12 @@ can then use your keyboard to edit the text. To view the formatted
 or use the `Shift + Enter` keyboard shortcut.
 
 ```{r markdown-cell-not-run, echo = FALSE, fig.cap = "A Markdown cell in Jupyter that has not yet been rendered and can be edited.", fig.retina = 2, out.width="100%"}
-image_read("img/markdown-cell-not-run.png") |> 
+image_read("img/jupyter/markdown-cell-not-run.png") |> 
   image_crop("3632x900")
 ```
 
 ```{r markdown-cell-run, echo = FALSE, fig.cap = "A Markdown cell in Jupyter that has been rendered and exhibits rich text formatting. ", fig.retina = 2, out.width="100%"}
-image_read("img/markdown-cell-run.png") |> 
+image_read("img/jupyter/markdown-cell-run.png") |> 
   image_crop("3632x900")
 ```
 
@@ -204,7 +204,7 @@ ensure it is activated.  Then click on the drop-down box on the toolbar that say
 is next to the `r fa("fast-forward", height = "11px")` button), and change it from "**Code**" to "**Markdown**" (Figure \@ref(fig:convert-to-markdown-cell)).
 
 ```{r convert-to-markdown-cell, echo = FALSE, fig.cap = "New cells are by default code cells. To create Markdown cells, the cell format must be changed.", fig.retina = 2, out.width="100%"}
-image_read("img/convert-to-markdown-cell.png") |> 
+image_read("img/jupyter/convert-to-markdown-cell.png") |> 
   image_crop("3632x900")
 ```
 
@@ -252,12 +252,12 @@ to errors when the notebook is run in the conventional
 linear order (Figure \@ref(fig:out-of-order-3)).
 
 ```{r out-of-order-1, echo = FALSE, fig.cap = "Code that was written out of order, but not yet executed.", fig.retina = 2, out.width="100%"}
-image_read("img/out-of-order-1.png") |> 
+image_read("img/jupyter/out-of-order-1.png") |> 
   image_crop("3632x800")
 ```
 
 ```{r out-of-order-2, echo = FALSE, fig.cap = "Code that was written out of order, and was executed using the run button in a nonlinear order without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
-image_read("img/out-of-order-2.png") |> 
+image_read("img/jupyter/out-of-order-2.png") |> 
   image_crop("3632x800")
 ```
 
@@ -265,7 +265,7 @@ image_read("img/out-of-order-2.png") |>
 (ref:out-of-order-3) Code that was written out of order, and was executed in a linear order using "Restart Kernel and Run All Cells..." This resulted in an error at the execution of the second code cell and it failed to run all code cells in the notebook.
 
 ```{r out-of-order-3, echo = FALSE, fig.cap = '(ref:out-of-order-3)', fig.retina = 2, out.width="100%"}
-image_read("img/out-of-order-3.png") |> 
+image_read("img/jupyter/out-of-order-3.png") |> 
   image_crop("3632x800")
 ```
 
@@ -349,12 +349,12 @@ you will not know which function to use, nor which arguments to use and values
 to specify for them.
 
 ```{r open-data-w-editor-1, echo = FALSE, fig.cap = "Opening data files with an editor in Jupyter.", fig.retina = 2, out.width="100%"}
-image_read("img/open_data_w_editor_01.png") |> 
+image_read("img/jupyter/open_data_w_editor_01.png") |> 
   image_crop("3632x2000")
 ```
 
 ```{r open-data-w-editor-2, echo = FALSE, fig.cap = "A data file as viewed in an editor in Jupyter.", fig.retina = 2, out.width="100%"}
-image_read("img/open_data_w_editor_02.png") |> 
+image_read("img/jupyter/open_data_w_editor_02.png") |> 
   image_crop("3632x2000")
 ```
 
@@ -397,7 +397,7 @@ you can get a new one via clicking the **+** button at the top of the Jupyter
 file explorer (Figure \@ref(fig:launcher)). 
 
 ```{r launcher, echo = FALSE, fig.cap = "Clicking on the R icon under the Notebook heading will create a new Jupyter notebook with an R kernel.", fig.retina = 2, out.width="100%"}
-image_read("img/launcher-annotated.png") |> 
+image_read("img/jupyter/launcher-annotated.png") |> 
   image_crop("3632x2000")
 ```
 
