added fontawesome latex package, more robust printing of unicode/fontawesome symbols in jupyter

--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -4,6 +4,7 @@
 \usepackage[bf,singlelinecheck=off]{caption}
 \usepackage[scale=.7]{sourcecodepro}
 \usepackage{url}
+\usepackage{fontawesome5}
 
 \usepackage{framed,color}
 \definecolor{shadecolor}{RGB}{248,248,248}
